create user auth --in progress
